@@ -1,5 +1,8 @@
 2005-01-18  Tom Tromey  <tromey@redhat.com>
 
+	* model/typevar.hh (model_type_variable::compute_descriptor): New
+	method.
+
 	* bytecode/classreader.cc (parse_signature): Don't set superclass
 	for interface.
 
